--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,8 @@
 
 body{
     background: var(--color-bg);
-    font-family: 'Poppins', sans-serif;
+   
+    font-family: 'Orbitron';
     font-size: 1.1 rem;
     color: var(--color-gray-200);
     line-height: 1.6; /* Space between each line */
@@ -204,9 +205,12 @@ nav button{
 }
 
 /*---------------------------------- GENERAL POST ---------------------------------------*/
+.post{
+    border: 3px solid var(--color-white);
+    padding: 8px;
+}
 .post-image{
-    border: 1rem solid var(--color-gray-900);
-    border-radius: 8rem 0;
+    border: 3px solid var(--color-white);
     overflow: hidden;
     margin-bottom: 1.6rem;
 }
@@ -237,6 +241,8 @@ nav button{
 }
 
 .last__post-container{
+    border: 3px solid var(--color-white);
+    padding: 8px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 4rem;
@@ -267,6 +273,9 @@ nav button{
     width: fit-content;
 }
 
+.category{
+    border: 3px solid var(--color-white);
+}
 /*---------------------------------- FOOTER ---------------------------------------*/
 footer{
     background:var(--color-gray-900);
@@ -332,6 +341,7 @@ footer ul a:hover{
     background:var(--color-gray-900);
     color: var(--color-gray-300);
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: 3.5rem;
@@ -422,6 +432,7 @@ height: 100vh;
     padding: .8rem 1.4rem;
     border-radius: .8rem;
     margin-bottom: 1rem;    
+    text-align: center;
 }
 
 .alert__message.error{
